--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Aug 12 15:56:29 CST 2015
-sdk.dir=D\:\\Android\\sdk
+#Tue Aug 18 09:10:11 CST 2015
+sdk.dir=C\:\\WorkFiles\\Android\\Sdk
